[gd_scene load_steps=11 format=3 uid="uid://cm41hqkdiyu6y"]

[ext_resource type="Script" uid="uid://8dxe7iybvytm" path="res://Menu/main_menu.gd" id="1_ci1se"]
[ext_resource type="StyleBox" uid="uid://brarhp5gjq4g2" path="res://Menu/main_menu.tres" id="1_sla5p"]
[ext_resource type="FontFile" uid="uid://cj6nuyxcaw0u8" path="res://font/main_font.ttf" id="2_ohgnh"]
[ext_resource type="Texture2D" uid="uid://ds5nncmrb7txl" path="res://Menu/x2.png" id="4_fw3rq"]

[sub_resource type="Theme" id="Theme_fw3rq"]
default_font = ExtResource("2_ohgnh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtkyu"]
bg_color = Color(0.180392, 0.180392, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ci1se"]
bg_color = Color(0.192157, 0.192157, 0.356863, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sla5p"]
bg_color = Color(0.180005, 0.180005, 0.180005, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Theme" id="Theme_rw3mj"]
default_font = ExtResource("2_ohgnh")
default_font_size = 0

[sub_resource type="Theme" id="Theme_ohgnh"]
default_font = ExtResource("2_ohgnh")

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ci1se")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.091
anchor_bottom = 1.0
offset_top = -88.0
offset_right = 95.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="StartGameBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fw3rq")
theme_override_styles/focus = SubResource("StyleBoxFlat_dtkyu")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ci1se")
theme_override_styles/hover = SubResource("StyleBoxFlat_sla5p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ci1se")
theme_override_styles/normal = ExtResource("1_sla5p")
text = "Start Game"

[node name="OptionsBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fw3rq")
theme_override_styles/focus = SubResource("StyleBoxFlat_dtkyu")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ci1se")
theme_override_styles/hover = SubResource("StyleBoxFlat_sla5p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ci1se")
theme_override_styles/normal = ExtResource("1_sla5p")
text = "Options"

[node name="HelpBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fw3rq")
theme_override_styles/focus = SubResource("StyleBoxFlat_dtkyu")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ci1se")
theme_override_styles/hover = SubResource("StyleBoxFlat_sla5p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ci1se")
theme_override_styles/normal = ExtResource("1_sla5p")
text = "Help"

[node name="Block" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 201.0
offset_bottom = 199.0

[node name="OptionsMenu" type="ReferenceRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.35
anchor_right = 0.9
anchor_bottom = 0.65
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.299547, 0.299547, 0.299547, 1)

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 2

[node name="GridContainer" type="GridContainer" parent="OptionsMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Empty" type="Control" parent="OptionsMenu/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_stretch_ratio = 4.74

[node name="Label" type="Label" parent="OptionsMenu/MarginContainer/GridContainer/Empty"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rw3mj")
text = "Options"

[node name="OptionsExit" type="Button" parent="OptionsMenu/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource("4_fw3rq")

[node name="SFXLabel" type="Label" parent="OptionsMenu/MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_rw3mj")
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="OptionsMenu/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
rounded = true

[node name="MusicLabel" type="Label" parent="OptionsMenu/MarginContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_rw3mj")
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="OptionsMenu/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="HelpMenu" type="ReferenceRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.35
anchor_right = 0.9
anchor_bottom = 0.65
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="HelpMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.299547, 0.299547, 0.299547, 1)

[node name="MarginContainer" type="MarginContainer" parent="HelpMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 2

[node name="HelpExit" type="Button" parent="HelpMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
icon = ExtResource("4_fw3rq")

[node name="Label" type="Label" parent="HelpMenu/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_ohgnh")
text = "Movement - WASD
Shoot - LMB
Aim - Mouse
Pause - E
You can destroy blocks"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HelpBtn" to="." method="_on_help_btn_pressed"]
[connection signal="pressed" from="OptionsMenu/MarginContainer/GridContainer/OptionsExit" to="." method="_on_options_exit_pressed"]
[connection signal="value_changed" from="OptionsMenu/MarginContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="OptionsMenu/MarginContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
